Release 0.1.1
- Renamed role PDF::OutlineItem -> PDF::Outline
Release 0.1.0
- Adjust to latest PDF. PDF::DAO classes have been renamed
  to PDF::COS (Carousel Object System)
Release 0.0.8
- Revamped PDF::Function::Sampled::Calculator
Release 0.0.7
Add PDF function calculator and evaluate methods, classes:
- PDF::Function::PostScript
- PDF::Function::Sampled
- PDF::Function::Exponential
- PDF::Function::Stitching
Release 0.0.6
- Fix PDF::Page.Annots accessor. Now coerces fields to PDF::Field
Release 0.0.5
- Set up accessor aliases, e.g. D(dash) in PDF::Appearance
Release 0.0.4
- Add etc/make-quick-ref.pl use it to generate table of classes in README.md
Release 0.0.3
- Correct attribute name: Bound -> Bounds in PDF::Function::Stitching
Release 0.0.2
- Fix syntax of PDF::Content::XObject['PS'] and PDF::Font::Type3
Release 0.0.1
- initial release