@@ -39,7 +39,7 @@
               {
                 "dict": {
                   "Producer": {
-                    "literal": "Perl 6 PDF::Class 0.1.0"
+                    "literal": "Perl 6 PDF::Class 0.1.1"
                   },
                   "CreationDate": {
                     "literal": "D:20151225000000Z00'00'"
