@@ -1,5 +1,6 @@
 Release 0.1.1
 - Renamed role PDF::OutlineItem -> PDF::Outline
+- Add PDF::Destination; removed destination handling from PDF::Action
 Release 0.1.0
 - Adjust to latest PDF. PDF::DAO classes have been renamed
   to PDF::COS (Carousel Object System)
